--- a/pub/index.html
+++ b/pub/index.html
@@ -1,6 +1,8 @@
 <html  ng-app="capp">
   <head>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.16/angular.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 	<script type="text/javascript" src="/app.js"></script>
 	<style>thead {color:green;}
            tbody {color:blue;}
@@ -34,7 +36,7 @@
           <td>{{ result.navn }} </td>
 		  <td>{{ result.epost }} </td>
 		  <td>{{ result.tid }}</td>
-		  <td> &nbsp; </td>
+		  <td> <button ng-click="delete(result._id)" class="btn btn-danger">DELETE</button> </td>
       </tr>
 	  
 	   <tr class="form-control">
